Fix label overflow

--- a/app/assets/stylesheets/admin/activities.css
+++ b/app/assets/stylesheets/admin/activities.css
@@ -128,3 +128,8 @@
 #activity_participant_limit {
   width: 50px;
 }
+
+#activity_table {
+  table-layout: fixed;
+  overflow: hidden;
+}
